<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PlayTask</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mission_title">任务名称</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="tabs_for_navigation">Tabs for navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">ok</string>
    <string name="title"></string>
    <string name="string_point">成就点数</string>
    <string name="new_tasks">新建任务</string>
    <string name="string_times">数量</string>
    <string name="reward_title">奖励名称</string>
    <string name="string_type">奖励类型</string>
    <string name="new_rewards">新建奖励</string>

</resources>