<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMissionActivity">

    <TextView
        android:id="@+id/text_view_mission_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/mission_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_mission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@+id/text_view_mission_label"
        app:layout_constraintTop_toTopOf="@id/text_view_mission_label"
        android:layout_marginLeft="50dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textview_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/string_point"
        app:layout_constraintStart_toStartOf="@+id/text_view_mission_label"
        app:layout_constraintTop_toTopOf="@+id/text_view_mission_label"/>

    <EditText
        android:id="@+id/edittext_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_mission_title"
        app:layout_constraintTop_toTopOf="@+id/textview_point" />

    <TextView
        android:id="@+id/textview_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/string_times"
        app:layout_constraintStart_toStartOf="@+id/textview_point"
        app:layout_constraintTop_toTopOf="@+id/textview_point"/>

    <EditText
        android:id="@+id/edittext_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/edittext_point"
        app:layout_constraintTop_toTopOf="@+id/textview_times" />

    <Button
        android:id="@+id/button_item_details_ok"
        android:layout_width="200dp"
        android:layout_height="98dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_times" />
</androidx.constraintlayout.widget.ConstraintLayout>
